@@ -726,7 +726,14 @@ function delete_files()
         'relocate_server.php',
         'scripts.js',
         'bridge/phpbb22.inc.php',
-		'albums/edit/index.htm',
+        'bridge/punbb.inc.php',
+        'bridge/smf.inc.php',
+        'bridge/vbulletin.inc.php',
+        'bridge/vbulletin23.inc.php',
+        'bridge/vbulletin3gamma.inc.php',
+        'bridge/woltlab21.inc.php',
+        'bridge/yabbse.inc.php',
+        'albums/edit/index.htm',
         'docs/COPYING',
         'docs/faq.htm',
         'docs/faq_de.htm',
@@ -765,7 +772,7 @@ function delete_files()
         'images/smiles/icon_wink.gif',
         'include/imageObjectGD.class.php',
         'include/imageObjectIM.class.php',
-		'include/index.html',
+        'include/index.html',
     );
 
     // Check if the file exists in the first place
