@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-11-17 [M] Added old bridge files to delete file array (thread ID 62519) {eenemeenemuu}
 2009-11-16 [C] Added transparency to navbar images {GauGau}
 2009-11-16 [C] Added missing navbar images to standard themes (thread ID 62511) {eenemeenemuu}
 2009-11-16 [M] Added message if no pictures were moved in picmgr.php (thread ID 62494) {eenemeenemuu}
